<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".aceptaroferta_activity">


    <Button
        android:id="@+id/btnnegar"
        android:layout_width="311dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:background="@color/colorfoto"
        android:backgroundTint="@color/colorfoto"
        android:fontFamily="@font/roboto"
        android:text="@string/negar"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnaceptar" />

    <Button
        android:id="@+id/btnaceptar"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="106dp"
        android:background="@color/colorprincipal"
        android:backgroundTint="@color/colorprincipal"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/white"
        android:text="@string/aceptar"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvdescripcion3" />

    <TextView
        android:id="@+id/txvnombrearticulo3"
        android:layout_width="381dp"
        android:layout_height="39dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nombrearticulo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articulo3" />

    <TextView
        android:id="@+id/txvdescripcion3"
        android:layout_width="386dp"
        android:layout_height="112dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvnombrearticulo3" />

    <ImageView
        android:id="@+id/articulo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="416dp"
        android:layout_height="219dp"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="48dp"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>