<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">



    <TextView
        android:id="@+id/txvmenucambios2"
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/menu1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorprincipal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvdescripcion2" />

    <TextView
        android:id="@+id/txvmenuofertas2"
        android:layout_width="178dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/menu2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorprincipal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvdescripcion2" />

    <TextView
        android:id="@+id/txvnombrearticulo2"
        android:layout_width="384dp"
        android:layout_height="36dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nombrearticulo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articulo2" />

    <TextView
        android:id="@+id/txvdescripcion2"
        android:layout_width="387dp"
        android:layout_height="55dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvnombrearticulo2" />

    <ImageView
        android:id="@+id/articulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="416dp"
        android:layout_height="219dp"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="48dp"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvmenucambios2"
        android:layout_width="411dp"
        android:layout_height="354dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="247dp" />

</androidx.constraintlayout.widget.ConstraintLayout>