<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:background="@color/grisfondo"
        android:ems="10"
        android:hint="Ingrese su contraseña..."
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="2dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreo" />

    <EditText
        android:id="@+id/txtcorreo"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:background="@color/grisfondo"
        android:ems="10"
        android:hint="Ingrese su correo..."
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="2dp"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/colorhint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.082" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="385dp"
        android:layout_height="118dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/easytrade" />

    <TextView
        android:id="@+id/txvo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/oo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_button" />

    <Button
        android:id="@+id/btniniciarsesion"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorprincipal"
        android:backgroundTint="@color/colorprincipal"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/white"
        android:text="@string/iniciosesion"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="316dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        android:shadowColor="@color/white"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btniniciarsesion" />

    <TextView
        android:id="@+id/linkcuenta"
        android:layout_width="251dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto"
        android:text="@string/cuenta"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorprincipal"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvo" />

</androidx.constraintlayout.widget.ConstraintLayout>